# bach-MIDI-Generator-with-Transformers

./: .gitignore  BaseChunkingDataset.py  MIDIDataset.py  MIDIDatasetPreprocessed.py  MIDI_data_extractor.py  MIDI_merger.py  MIDI_merger_all.ipynb  MIDIprocessor.py  README.md  add_column_to_2d_array.py  all_MIDI_data.ipynb  all_midi_extractor.ipynb  checker.py  data_to_MIDI.py  data_to_MIDI_test.py  data_to_numbers.ipynb  data_to_numbers.py  data_to_nums2.py  data_to_readable.py  embedding.ipynb  extract_all_MIDI_data.ipynb  extractor_test.ipynb  generator_v2.ipynb  index_based_matrix_appender.py  info_abt_all_data_2.ipynb  main.py  pickling.ipynb  preprocess_midi.py  pyproject.toml  requirements.txt  setup.py  transformer.ipynb
Data Extraction/: all_midi_extractor.ipynb  info_abt_all_data_2.ipynb  midi_data_ex_test.py  pickling.ipynb
Data_Extraction/: MIDI_data_extractor.py  all_midi_extractor.ipynb  data_to_numbers.ipynb  data_to_readable.py  extractor_test.py  info_abt_all_data_2.ipynb  middle_tokenizer.ipynb  pickling.ipynb  tokenizer.ipynb  tokenizer.py
Deprecated and Unused/: MIDI_data_extractor_note_off.py  data_to_MIDI_note_off.py  data_to_numbers.py  extract_all_MIDI_data.ipynb  generator.ipynb  generator_v2.ipynb  transformer.ipynb
PreProcessing/: MIDI_merger.py
config/: config.yaml
machine learning/: AutoregressiveWrapper.py  TransformerWrapper.py  model.pth  small_tokenizer_test.ipynb  small_x_transformer.ipynb  test.py  x_transformer_test.ipynb
scripts/: check_reconstruction.py  generate.py  preprocess_data.py  train_model.py
src/: base_dataset.py  callbacks.py  constants.py  custom_embedder.py  hybrid_model.py  (+4 more)
(+477 files in other folders)
